--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "linux": {
       "category": "your.app.category.type",
       "target": "AppImage"
-    }
+    },
+    "publish": [{
+      "provider": "github",
+      "owner": "KongLee26",
+      "repo": "electron-updater-ex"
+  }]
   }
 }
